--- a/paper/Poissons.bib
+++ b/paper/Poissons.bib
@@ -1,3 +1,19 @@
+@incollection {Lewis,
+	AUTHOR = {Lewis, Richard P.},
+	TITLE = {The number of spanning trees of a complete multipartite graph},
+	NOTE = {16th British Combinatorial Conference (London, 1997)},
+	JOURNAL = {Discrete Math.},
+	FJOURNAL = {Discrete Mathematics},
+	VOLUME = {197/198},
+	YEAR = {1999},
+	PAGES = {537--541},
+}
+
+
+
+
+
+
 @Article{Rota,
  Author = {Rota, Gian-Carlo},
  Title = {On the foundations of combinatorial theory. {I}: {Theory} of {M{\"o}bius} functions},
