--- a/paper/aux/commands.tex
+++ b/paper/aux/commands.tex
@@ -35,6 +35,7 @@
 \newtheorem{questions}[theorem]{Questions}
 \theoremstyle{definition}
 \newtheorem{definition}[theorem]{Definition}
+\newtheorem{notation}[theorem]{Notation}
 
 \newtheorem{conjecture}[theorem]{Conjecture} 
 \newtheorem{problem}{Problem}
