--- a/paper/sec/bijections.tex
+++ b/paper/sec/bijections.tex
@@ -611,9 +611,9 @@ Observe that the permutation can be read off the graph of the SCP by a vertical 
 
 As the intersection graph of any pair of essential complementary partitions is a bipartite tree, there is a unique path between any two vertices. 
 
-\begin{definition}
+\begin{notation}[Paths between blocks]
     For $(\sigma,\tau)$ a pair of essential complementary partitions, we denote by $\sigma_{i,j}$ (resp. $\tau_{i,j}$) the unique oriented path between blocks $\sigma_{i}$ and $\sigma_j$ (resp. $\tau_{i}$ and $\tau_j$).
-\end{definition}
+\end{notation}
 Note that we make a slight abuse in notation as the path $\sigma_{i,j}$ also depends on $\tau$.
 We can immediately characterise the paths between adjacent blocks of $\SCP$s.
 
@@ -765,47 +765,55 @@ Let us call \emph{critical} the right and left shift operators associated with t
 \subsubsection{First isomorphism: subset shift and shift}
 
 We now make an interesting observation, whose proof is key to an equivalent definition of the subset shift $\SUD$ diagonal. 
-\begin{lemma} \label{lem:SU subset conserves maximal element of paths}
+\begin{proposition} 
+\label{prop:SU-preserves-max}
 The $\SU$ subset shift operators conserve the maximal element of paths.
-In particular, for $(\sigma,\tau)\in SCP$ and a valid shift of it $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$, then
+In particular, for $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ a valid shift of an $\SCP$, we have that
 \begin{align*}
     \max R_{\mathbf{M}}(\sigma)_{i,j} = \max \sigma_{i,j} \text{ and } \max L_{\mathbf{N}}(\tau)_{i,j} = \max \tau_{i,j}
 \end{align*}
-and consequently,
+and consequently that
 \begin{align*}
-    \max R_{\mathbf{M}}(\sigma)_{i,i+1} = \max \sigma_{i+1} \text{ and } \max L_{\mathbf{N}}(\tau)_{i,i+1} = \max \tau_{i} 
+    \max R_{\mathbf{M}}(\sigma)_{i,i+1} = \max \sigma_{i+1} \text{ and } \max L_{\mathbf{N}}(\tau)_{i,i+1} = \max \tau_{i}  \ .
 \end{align*}
-\end{lemma}
+\end{proposition}
 
 \begin{proof}
-We consider the right subset shift operator, and the left subset shift operator proceeds similarly.
-As $\SCP$s trivially meet these conditions, we will prove the result inductively by assuming the result holds for $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$, and then showing that applying a valid operator $R_{M_k}$ conserves the maximal elements.
+We consider the right subset shift operator; the left subset shift operator proceeds similarly.
+As $\SCP$s trivially meet the above conditions, we will prove the result inductively by assuming the result holds for $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$, and then showing that applying a valid operator $R_{M_k}$ conserves the maximal elements of paths.
 By the inductive hypothesis, we know that $\max R_{\mathbf{M}}(\sigma)_{k,k+1}= \max \sigma_{k+1}$.
 As $R_{M_k}$ is a valid operator, we know two things.
 Firstly $\min M_k > \max R_{\mathbf{M}}(\sigma)_{k+1}$.
 Secondly, as $k$ is greater than the maximal index used by $\mathbf{M}$, we have that $\max \sigma_{k+1} = \max R_{\mathbf{M}}(\sigma)_{k+1}$.
-So combining these we know, 
-\begin{align}\label{eq:shift subset dominates adj path}
-    \min M_k > \max R_{\mathbf{M}}(\sigma)_{k+1} = \max \sigma_{k+1} = \max R_{\mathbf{M}}(\sigma)_{k,k+1}
+So combining these we know that
+\begin{align}\label{eq:shift-subset-dominates}
+    \min M_k > \max R_{\mathbf{M}}(\sigma)_{k+1} = \max \sigma_{k+1} = \max R_{\mathbf{M}}(\sigma)_{k,k+1} \ . 
 \end{align}
-A key consequence of this inequality is that the corresponding graph of $(R_{M_k}R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ is a bipartite tree conditional on $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ being a bipartite tree (the shift will not disconnect the graph as none of the shifted elements are in the path $R_{\mathbf{M}}(\sigma)_{k,k+1}$). So, it is well-defined to speak of unique paths between blocks. 
+A key consequence of this inequality is that the corresponding graph of $(R_{M_k}R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ is a bipartite tree conditional on $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ being a bipartite tree: the shift will not disconnect the graph as none of the shifted elements are in the path $R_{\mathbf{M}}(\sigma)_{k,k+1}$. 
+So, it is legitimate to speak of unique paths between blocks. 
+
 We now explicitly explore how the shift operator $R_{M_k}$ alters paths. 
-Throughout the rest of this proof, we use the following shorthand. 
-Let $\delta_{k,k+1} \eqdef  R_{\mathbf{M}}(\sigma)_{k,k+1}$ (i.e. the path between the adjacent blocks in $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ ), and let $\delta_{k+1,k}$ be the same path reversed.
-Let $\gamma$ be a path between two blocks on one side of $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$, and $\gamma'$ the path between the same blocks, by indices, in $(R_{M_k}R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$. 
-We assume for now that the start and end of the path $\gamma$ are distinct from those of $\delta_k$.
+Throughout the rest of this proof, we use the following shorthand: we denote by $\delta_{k,k+1} \eqdef  R_{\mathbf{M}}(\sigma)_{k,k+1}$ the path between the adjacent blocks in $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ ), and by $\delta_{k+1,k}$ the same path reversed.
+Let $\gamma$ be any path between two blocks on the same side of $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$, and $\gamma'$ the path between the same blocks, by indices, in $(R_{M_k}R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$. 
+We assume for now that the start and end of the path $\gamma$ are distinct from those of $\delta_{k,k+1}$.
 There are four cases to consider. 
 \begin{enumerate}
     \item $\gamma$ does not contain an element of $M_k$.
     It is thus unaffected by the shift, so $\gamma' = \gamma$.
-    \item $\gamma$ contains one element $m\in M_k$, i.e. $\gamma = \alpha m \beta$.
-    Then there are two cases to consider
+    In particular, its maximal element stays the same. 
+    \item $\gamma$ contains one element $m\in M_k$, i.e. it is of the form $\gamma = \alpha m \beta$.
+    Note that since $M_k$ defines a shift, $m$ is not in $\delta_{k,k+1}$, and $\delta_{k,k+1}$ is unaffected by the shift. 
+    We assume that $m$ is incoming to $R_\mathbf{M}(\sigma)_{k}$, the case when it is outgoing is similar.
+    We must have $\alpha \cap \delta_{k,k+1}=\emptyset$ (resp. $\beta \cap \delta_{k,k+1}=\emptyset$) since otherwise there would be an oriented loop from $R_\mathbf{M}(\sigma)_{k}$ to itself.
+    For the same reason, $\beta \cap \delta_{k,k+1}$ (resp. $\alpha \cap \delta_{k,k+1}$) must be connected and starting (resp. ending) at $R_\mathbf{M}(\sigma)_{k}$.
+    Then there are two cases to consider:
     \begin{enumerate}
-        \item $\beta$ does not use any steps of $\delta_{k,k+1}$, in which case $\gamma' = \alpha m \delta_{k+1,k} \beta$.
+        \item $\beta$ (resp. $\alpha$) does not use any steps of $\delta_{k,k+1}$, in which case $\gamma' = \alpha m \delta_{k+1,k} \beta$ (resp. $\gamma'=\alpha\delta_{k,k+1}m\beta$).
         This is a path in the tree of $(R_{M_k}R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ with no repeated steps, as such it must be the unique minimal path. 
-        (There cannot be another path as this would induce a cycle on the tree.)
-        \item $\beta$ uses steps of $\delta_{k,k+1}$, in which case $\gamma' = \alpha m (\delta_{k+1,k}\ssm \beta)(\beta \ssm \delta_{k+1,k})$.
-        This follows, as we know that $\beta$ must follow the path $\delta_{k,k+1}$ for some time before diverging ($\beta$ could also be a subset of $\delta_{k,k+1}$, in which case it will never diverge).
+        Since $\max \gamma \geq m$ and $m\geq \max \delta_{k,k+1}$, we deduce that $\max \gamma = \max \gamma'$.
+        
+        \item $\beta$ (resp. $\alpha$) uses steps of $\delta_{k,k+1}$, in which case $\gamma' = \alpha m (\delta_{k+1,k}\ssm \beta)(\beta \ssm \delta_{k+1,k})$ (resp. $\gamma' = (\alpha\ssm \delta_{k,k+1})(\delta_{k,k+1}\ssm\alpha) m \beta$).
+        This follows, as we know that $\beta$ (resp. $\alpha$) must follow the path $\delta_{k,k+1}$ for some time before diverging ($\beta$ -resp. $\alpha$- could also be a subset of $\delta_{k,k+1}$, in which case it will never diverge).
         As such, the path $(\delta_{k+1,k}\ssm \beta)$ reaches the point of divergence from $R_{\mathbf{M}}(\sigma)_{k+1}$ instead of $R_{\mathbf{M}}(\sigma)_{k}$, then the path $(\beta \ssm \delta_{k+1,k})$ completes the rest of the route unchanged.
     \end{enumerate}
     \item $\gamma$ contains two elements of $M_k$. In which case we still have $\gamma'=\gamma$ (in path elements) but $\gamma'$ will step through the $(k+1)$th block instead of $\gamma$ stepping through the $k$th block.
@@ -822,14 +830,14 @@ Then $\gamma$ is altered by the shift to $\gamma'$ as follows,
     \item if $\gamma$ connects $R_{\mathbf{M}}(\sigma)_k$ and $R_{\mathbf{M}}(\sigma)_{k+1}$, then $\gamma = \delta_{k,k+1}$ so this implies that $m\in \delta_{k,k+1}$, which is a contradiction as $m> \max \delta_{k,k+1}$.
 \end{itemize}
 Observe all (non-trivial or non-contradictory) paths $\gamma'$ contain $m>\min M_k$ and either some addition or deletion by $\delta_{k,k+1}$.
-It thus follows from \cref{eq:shift subset dominates adj path} that $\max \gamma' = \max \gamma$, in each case, the maximal element will either be $m$, or in $\alpha$, or in $\beta$.
+It thus follows from \cref{eq:shift-subset-dominates} that $\max \gamma' = \max \gamma$, in each case, the maximal element will either be $m$, or in $\alpha$, or in $\beta$.
 \end{proof}
 
-The key result of the inductive proof was the chain of inequalities which yielded $\min M_k > \max R_{\mathbf{M}}(\sigma)_{k,k+1}$ (\cref{eq:shift subset dominates adj path}).
+The key result of the inductive proof was the chain of inequalities which yielded $\min M_k > \max R_{\mathbf{M}}(\sigma)_{k,k+1}$ (\cref{eq:shift-subset-dominates}).
 It turns out, if we assume the inequality holds, we can drop the assumption that $k$ is greater than the maximal index used by $\mathbf{M}$, and the assumption that $\min M_k > \max R_{\mathbf{M}}(\sigma)_{k+1}$. 
 Furthermore, once we have dropped the assumption that we need to perform shifts in an increasing order, we can generate all subset shifts by chains of singleton set shifts. This motivated the definition \cref{def:critical SU shift}.
 
-As we have assumed the necessary feature of the proof of \cref{lem:SU subset conserves maximal element of paths}, we have the immediate corollary.
+As we have assumed the necessary feature of the proof of \cref{prop:SU-preserves-max}, we have the immediate corollary.
 
 \begin{corollary} \label{cor: SU shift conserves maximal element of paths}
 The critical left and right shift operators conserve the maximal element of paths, and if $(\sigma',\tau')$ is generated from critical shifts of $(\sigma,\tau) \in SCP$ then,
@@ -850,7 +858,7 @@ The subset shift, and shift definitions of the $\SUD$ diagonal coincide.
 
 \begin{proof}
 We analyse the right shift operator, the case of the left shift is similar. 
-First, we observe that any subset right shift $R_{M_k}(\sigma)$ can be decomposed in a series of right shifts: since $\min M_k > \max \sigma_{k,k+1}$ by the proof of \cref{lem:SU subset conserves maximal element of paths}, we can first shift $\min M_k$ to the right, then $\min (M_k \ssm \min M_k)$, and so on until the entire subset $M_k$ has been shifted to the right. 
+First, we observe that any subset right shift $R_{M_k}(\sigma)$ can be decomposed in a series of right shifts: since $\min M_k > \max \sigma_{k,k+1}$ by the proof of \cref{prop:SU-preserves-max}, we can first shift $\min M_k$ to the right, then $\min (M_k \ssm \min M_k)$, and so on until the entire subset $M_k$ has been shifted to the right. 
 This shows that any facet of the subset shift $\SUD$ diagonal is also a facet in the shift $\SUD$ diagonal
 \\\\
 For the reverse inclusion, we proceed by induction. We are required to show that if we apply a critical right shift to $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$, say $(R_{\rho}R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$, then this can be re-expressed as a well-defined subset shift operation i.e. $(R_{\mathbf{M'}}(\sigma),L_{\mathbf{N}}(\tau))$. Suppose that prior to the critical shift that $\rho$ lives in block $l$, then we must have
@@ -924,7 +932,7 @@ If we apply a well-defined inverse shift operator $R^{-1}_{\rho}$ to $(\sigma,\t
 The inverse shift operators conserve the maximal elements of paths.
 \end{lemma}
 \begin{proof}
-This is an immediate corollary of the prior lemma, and the fact that the shift operators conserves maximal elements of paths (\cref{lem:SU subset conserves maximal element of paths}).
+This is an immediate corollary of the prior lemma, and the fact that the shift operators conserves maximal elements of paths (\cref{prop:SU-preserves-max}).
 \end{proof}
 
 \begin{lemma} \label{lem:SUD closed under inverse shifts}
